docs/pages/versions/v57.0.0/sdk/ui/swift-ui/lazyhstack.mdx
---
title: LazyHStack
description: A SwiftUI LazyHStack component for lazy horizontal layouts.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';

Expo UI LazyHStack matches the official SwiftUI [LazyHStack API](https://developer.apple.com/documentation/swiftui/lazyhstack) and arranges its children horizontally, creating items only as needed (when they become visible during scrolling).

> **info** `LazyHStack` is not truly lazy yet: the native side only builds visible items, but React still creates every child up front, so large lists can be slow to mount. We are working on improving this. For large lists, we recommend [FlashList](https://shopify.github.io/flash-list/) or [Legend List](https://github.com/LegendApp/legend-list).

## Installation

<APIInstallSection />

## Usage

### Basic lazy horizontal stack

LazyHStack should be used inside a `ScrollView` with `axes="horizontal"` to enable lazy rendering.

<ComponentExample
  title="BasicLazyHStackExample.tsx"
  src="/static/images/expo-ui/examples/lazyhstack-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazyhstack-basic-ios-dark.webp"
  alt="A horizontal row of items numbered zero to five, centered on the screen.">

```tsx
import {
  Host,
  ScrollView,
  LazyHStack,
  Text,
} from '@expo/ui/swift-ui';

export default function BasicLazyHStackExample() {
  return (
    <Host style={{ flex: 1 }}>
      <ScrollView axes="horizontal">
        <LazyHStack spacing={12}>
          {Array.from({ length: 100 }, (_, i) => (
            <Text key={i}>{`Item ${i}`}</Text>
          ))}
        </LazyHStack>
      </ScrollView>
    </Host>
  );
}
```

</ComponentExample>

### With alignment

The `alignment` prop controls vertical alignment of children. Available options are: `top`, `center`, `bottom`, `firstTextBaseline`, and `lastTextBaseline`.

<ComponentExample
  title="LazyHStackAlignmentExample.tsx"
  src="/static/images/expo-ui/examples/lazyhstack-alignment-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazyhstack-alignment-ios-dark.webp"
  alt="Three rectangles of different heights in a row, aligned along their top edges.">

```tsx
import {
  Host,
  ScrollView,
  LazyHStack,
  Rectangle,
} from '@expo/ui/swift-ui';
import { frame } from '@expo/ui/swift-ui/modifiers';

export default function LazyHStackAlignmentExample() {
  return (
    <Host
      matchContents={{ horizontal: true }}
      style={{ flex: 1, alignSelf: 'center' }}>
      <ScrollView axes="horizontal">
        <LazyHStack spacing={12} alignment="top">
          <Rectangle
            modifiers={[frame({ width: 50, height: 50 })]}
          />
          <Rectangle
            modifiers={[frame({ width: 50, height: 100 })]}
          />
          <Rectangle
            modifiers={[frame({ width: 50, height: 75 })]}
          />
        </LazyHStack>
      </ScrollView>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { LazyHStack } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/lazyhstack"
  apiName="LazyHStack"
/>
